--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,4 @@
-name: TUR CI
-env:
-  BLAHAJ_API_TOKEN: ${{ secrets.BLAHAJ_API_TOKEN }}
-  MSG: "CI from commit https://github.com/${{ github.repository }}/commit/${{ github.sha }} succeeded."
+name: AUR CI
 on:
   push:
     branches: [ main ]
@@ -11,6 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions-rs/toolchain@v1
+      - name: "Build Docker image."
+        uses: docker
         with:
-          toolchain: stable
+          run: docker --debug build -t arch_repo .
