--- a/src/mandy/PKGBUILD
+++ b/src/mandy/PKGBUILD
@@ -11,11 +11,11 @@ makedepends=('rust')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/alyxshang/$pkgname/archive/refs/tags/v.$pkgver.tar.gz")
 
 build() {
-  cd "$pkgname-$pkgver"
+  cd "$pkgname-v.$pkgver"
   cargo build --release
 }
 
 package() {
-  cd "$pkgname-$pkgver"
+  cd "$pkgname-v.$pkgver"
   install -Dm755 "target/release/mandy" "$pkgdir/usr/bin/mandy"
 }
