--- a/src/luhny/PKGBUILD
+++ b/src/luhny/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=luhny
 pkgver=0.1.0
 pkgrel=1
 pkgdesc="A library and tool to validate unique device identifiers."
-arch=('any')
+arch=('x86_64')
 url="https://github.com/alyxshang/luhny.rs"
 license=('custom')
 depends=('rust')
