--- a/src/mandy/PKGBUILD
+++ b/src/mandy/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=mandy
 pkgver=0.1.0
 pkgrel=1
 pkgdesc="A light and fast static-site generator."
-arch=('any')
+arch=('x86_64')
 url="https://github.com/alyxshang/mandy"
 license=('custom')
 depends=('rust')
