--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,19 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: "Build Docker image."
-        uses: docker
+        run: docker --debug build -t arch_repo .
+      
+      - name: "Run the Docker image."
+        run: docker run arch_repo
+      
+      - name: "Copy repo to GitHub Actions disk."
+        run: docker cp arch_repo:/home/builduser/x86_64.tgz .
+      
+      - name: "Extract repo."
+        run: tar -xvzf x86_64.tgz
+      
+      - name: "Deploy the repo."
+        uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
-          run: docker --debug build -t arch_repo .
+          branch: gh-pages
+          folder: x86_64    
