--- a/src/sharkey/PKGBUILD
+++ b/src/sharkey/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=sharkey
 pkgver=0.2.0
 pkgrel=1
 pkgdesc="A tiny library and CLI tool to perform actions on Sharkey using Rust."
-arch=('any')
+arch=('x86_64')
 url="https://github.com/alyxshang/sharkey.rs"
 license=('custom')
 depends=('rust')
