--- a/src/sharkey/PKGBUILD
+++ b/src/sharkey/PKGBUILD
@@ -12,7 +12,7 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/alyxshang/$pkgname.rs/archi
 
 build() {
   cd "$pkgname.rs-v.$pkgver"
-  cargo build --release
+  cargo build --release --features=cli
 }
 
 package() {
